# englishProject

First try/: CMakeLists.txt
First try/solution/src/: main  main.c
Second try/: meta_compressor.ipynb  outout
